[package]
name = "hurdles"
version = "0.1.0"

description = "Counter-based thread barrier"
readme = "README.md"

authors = ["Jon Gjengset <jon@thesquareplanet.com>"]

documentation = "https://docs.rs/hurdles"
homepage = "https://github.com/jonhoo/hurdles"
repository = "https://github.com/jonhoo/hurdles.git"

keywords = ["synchronization", "barrier", "multithreading"]
categories = ["concurrency", "memory-management"]

license = "MIT/Apache-2.0"

[badges]
travis-ci = { repository = "jonhoo/hurdles" }


[dependencies]
